--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@xata.io/client": "^0.23.4",
     "csv-loader": "^3.0.5",
     "next": "13.0.6",
     "react": "18.2.0",
